--- a/public/places.html
+++ b/public/places.html
@@ -24,7 +24,6 @@
             <div class="col-md-1"></div>
             <div class="col-md-5">
                 <div class="col-md-12">
-                    <h2>Places</h2>
                     <table class="table table-hover table-responsive">
                         <thead>
                             <th>Place</th>
@@ -33,25 +32,7 @@
                         <tbody id="placeList"></tbody>
                     </table>
                 </div>
-                <div class="col-md-12">
-                    <a href="../#">Want to see these places on a map?</a>
-                </div>
             </div>
-<!--
-            <div class="col-md-10 col-md-offset-1">
-                    <div class="col-md-12">
-                        <h2>Add Place</h2>
-                    </div>
-                    <form class="form" id="addPlace">
-                        <div class="form-group col-sm-12">
-                            <input class="form-control" id="inputLocation" type="text" placeholder="Location">
-                        </div>
-                        <div class="form-group col-sm-12">
-                            <button class="btn btn-primary btn-block" id="btnAddPlace">Add Place</button>
-                        </div>
-                    </form>
-            </div>
--->
             <div class="col-md-1"></div>
         </div>
         <br>
@@ -64,7 +45,7 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-    <script src="js/global.js"></script>
+    <script src="js/places.js"></script>
 </body>
 
 </html>
