--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,7 @@
 
 <body>
 	<div class="container-fluid">
-		<div class="row" style="padding-bottom: 10px;">
-		</div>
+		<div class="row" style="padding-bottom: 10px;"></div>
 
 		<div class="row">
 			<div class="col-sm-3">
