--- a/public/effthisplace.html
+++ b/public/effthisplace.html
@@ -2,24 +2,29 @@
 <html>
 
 <head>
-    <title>Those Places</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+	<title>Kirishoru.com</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+	<script src="js/script.js"></script>
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/style.css">
 
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet-src.js"></script>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet-src.js"></script>
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 </head>
 
 <body>
-    <div class="container-fluid">
-		 		<div class="row" style="padding-bottom: 10px;"></div>
+	<div class="container-fluid">
+		<div class="row" style="padding-bottom: 10px;"></div>
 
-        <div class="row">
-<!--            <div class="col-xl-1"></div>-->
+		<div class="row">
+			<!--            <div class="col-xl-1"></div>-->
 			<div class="col-sm-3">
 				<div class="sidebar-nav">
 					<div class="navbar navbar-default bc-0-0" role="navigation">
@@ -44,7 +49,7 @@
 								</li>
 								<li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
 								</li>
-								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard Concept</a>
+								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
 								<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>
 								</li>
@@ -54,22 +59,22 @@
 					</div>
 				</div>
 			</div>
-			  
 
-                <div class="col-sm-9">
-					<div class="col-xs-12"  style="margin-bottom: 15px;">
 
-                <form class="form-inline" id="addPlace">
-                    <div class="form-group col-xs-12" style="margin-bottom: 15px;">
-                        
-                        <div class="input-group" style="width: inherit;">
-                            <input class="form-control" id="inputLocation" type="text" placeholder="Add all or part of an address, then rate it.">
-                            <span class="input-group-btn">
-                                <button name="rate" class="btn" type="button" id="r1" value="1"><i class="fa fa-smile-o"></i></button>
-                                <button name="rate" class="btn" type="button" id="r2" value="2"><i class="fa fa-meh-o"></i></button>
-                                <button name="rate" class="btn" type="button" id="r3" value="3"><i class="fa fa-frown-o"></i></button>
+			<div class="col-sm-9">
+				<div class="col-xs-12" style="margin-bottom: 15px;">
+
+					<form class="form-inline" id="addPlace">
+						<div class="form-group col-xs-12" style="margin-bottom: 15px;">
+
+							<div class="input-group" style="width: inherit;">
+								<input class="form-control" id="inputLocation" type="text" placeholder="Add all or part of an address, then rate it.">
+								<span class="input-group-btn">
+                                <button name="rate" class="btn ratebtn" type="button" id="r1" value="1"><i class="fa fa-smile-o"></i></button>
+                                <button name="rate" class="btn ratebtn" type="button" id="r2" value="2"><i class="fa fa-meh-o"></i></button>
+                                <button name="rate" class="btn ratebtn" type="button" id="r3" value="3"><i class="fa fa-frown-o"></i></button>
                             </span>
-<!--
+								<!--
                             <span class="input-group-addon" style="width: 100px;">
                             <small>(Hate it)</small>:1                  
                             <input type="radio" name="rate" id="r1" value=1>
@@ -77,26 +82,28 @@
                             <input type="radio" name="rate" id="r3" value=3>
                             3:<small>(Love it)</small></span>
 -->
-                        </div>
-                    </div>
-                    <div class="form-group col-xs-12" style="margin-bottom: 15px;">
-                        <textarea id="comment" class="form-control" rows="2" placeholder="Care to explain your rating?" style="width: 100%;"></textarea>
-                    </div>
+							</div>
+						</div>
+						<div class="form-group col-xs-12" style="margin-bottom: 15px;">
+							<textarea id="comment" class="form-control" rows="2" placeholder="Care to explain your rating?" style="width: 100%;"></textarea>
+						</div>
 
-						 <div class="form-group col-xs-12"><button class="btn btn-primary btn-block" id="btnAddPlace">Map it</button></div>
+						<div class="form-group col-xs-12">
+							<button class="btn btn-primary btn-block" id="btnAddPlace">Map it</button>
+						</div>
 
-                </form>
-						 </div>
-					<div class="col-xs-12 fill"><div id="map"></div></div>
-			  </div>
+					</form>
+				</div>
+				<div class="col-xs-12 fill">
+					<div id="map"></div>
+				</div>
+			</div>
 
-            </div>
-        </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+		</div>
+	</div>
 
-    </script>
-    <script src="js/map.js"></script>
+	</script>
+	<script src="js/map.js"></script>
 
 
 </body>
