--- a/public/index.html
+++ b/public/index.html
@@ -55,12 +55,12 @@
 			<div class="col-sm-9">
 
 				<!--Content-->
-				<div class="jumbotron bc-0-0">
-					<h1>Who?</h1>
-					<img class="img img-responsive img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">
-					<p>Caleb D. Barger...</p>
+<!--				<div class="jumbotron bc-0-0">-->
+					<h1>Expermintation Portal</h1>
+					<img class="img img-responsive pull-left img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">
+					<p>This is just a place for me to practice my meager skills. Please don't look too deep, I am not currently a developer by trade. Management, strategy, and leadership is my game these days.</p><p>That said, feel free to look around ay my junkpile.</p>
 
-				</div>
+<!--				</div>-->
 				<!--End Content-->
 
 			</div>
