--- a/public/effthisplace.html
+++ b/public/effthisplace.html
@@ -21,9 +21,8 @@
 
 <body>
 	<div class="container-fluid">
-		<div class="row" style="padding-bottom: 10px;"></div>
 
-		<div class="row">
+		<div class="row" style="padding-top: 10px;">
 			<!--            <div class="col-xl-1"></div>-->
 			<div class="col-sm-3">
 				<div class="sidebar-nav">
@@ -62,41 +61,26 @@
 
 
 			<div class="col-sm-9">
-				<div class="col-xs-12" style="margin-bottom: 15px;">
 
-					<form class="form-inline" id="addPlace">
-						<div class="form-group col-xs-12" style="margin-bottom: 15px;">
-
-							<div class="input-group" style="width: inherit;">
-								<input class="form-control" id="inputLocation" type="text" placeholder="Add all or part of an address, then rate it.">
-								<span class="input-group-btn">
-                                <button name="rate" class="btn ratebtn" type="button" id="r1" value="1"><i class="fa fa-smile-o"></i></button>
-                                <button name="rate" class="btn ratebtn" type="button" id="r2" value="2"><i class="fa fa-meh-o"></i></button>
-                                <button name="rate" class="btn ratebtn" type="button" id="r3" value="3"><i class="fa fa-frown-o"></i></button>
-                            </span>
-								<!--
-                            <span class="input-group-addon" style="width: 100px;">
-                            <small>(Hate it)</small>:1                  
-                            <input type="radio" name="rate" id="r1" value=1>
-                            <input type="radio" name="rate" id="r2" value=2>
-                            <input type="radio" name="rate" id="r3" value=3>
-                            3:<small>(Love it)</small></span>
--->
-							</div>
+				<form class="form-block" id="addPlace">
+					<div class="form-group" style="margin-bottom: 15px;">
+						<div class="input-group" style="width: inherit;">
+							<input class="form-control" rows="1" id="inputLocation" placeholder="Add all or part of an address, then rate it.">
+							<span class="input-group-btn">
+								<button name="rate" class="btn ratebtn" type="button" id="r1" value="1"><i class="fa fa-smile-o"></i></button>
+								<button name="rate" class="btn ratebtn" type="button" id="r2" value="2"><i class="fa fa-meh-o"></i></button>
+								<button name="rate" class="btn ratebtn" type="button" id="r3" value="3"><i class="fa fa-frown-o"></i></button>
+							</span>
 						</div>
-						<div class="form-group col-xs-12" style="margin-bottom: 15px;">
-							<textarea id="comment" class="form-control" rows="2" placeholder="Care to explain your rating?" style="width: 100%;"></textarea>
-						</div>
-
-						<div class="form-group col-xs-12">
-							<button class="btn btn-primary btn-block" id="btnAddPlace">Map it</button>
-						</div>
-
-					</form>
-				</div>
-				<div class="col-xs-12 fill">
-					<div id="map"></div>
-				</div>
+					</div>
+					<div class="form-group" style="margin-bottom: 15px;">
+						<textarea id="comment" class="form-control" rows="2" placeholder="Care to explain your rating?" style="width: 100%;"></textarea>
+					</div>
+					<div class="form-group">
+						<button class="btn btn-primary btn-block" id="btnAddPlace">Map it</button>
+					</div>
+				</form>
+				<div id="map"></div>
 			</div>
 
 		</div>
