--- a/public/dash.html
+++ b/public/dash.html
@@ -169,6 +169,7 @@
 				</div>
 			</div>
 			<div class="col-sm-9" id="dash">
+						<div class="panel panel-body"><p>I intend to use this area to practice designing data visualizations. The piece below was just a throwaway built with D3. I'll add more along with some descriptions and background as I get a chance to design them.</p></div>
 				<h3>Coming Soon</h3>
 			</div>
 		</div>
