--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<script src="js/script.js"></script>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -55,12 +56,21 @@
 			<div class="col-sm-9">
 
 				<!--Content-->
-<!--				<div class="jumbotron bc-0-0">-->
-					<h1>Expermintation Portal</h1>
-					<img class="img img-responsive pull-left img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">
-					<p>This is just a place for me to practice my meager skills. Please don't look too deep, I am not currently a developer by trade. Management, strategy, and leadership is my game these days.</p><p>That said, feel free to look around ay my junkpile.</p>
-
-<!--				</div>-->
+				<h1>Experimentation Portal</h1>
+				<div class="panel panel-body">
+					<p>This is just a place for me to practice my meager skills. Please don't look too deep, I am not a developer by trade.</p>
+					<p>That said, feel free to look around at my junkpile.</p>
+					<!--				<img class="img img-responsive pull-left img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">-->
+					<p>Check me out on:</p>
+					<ul>
+						<li><a href="https://github.com/kirishoru"><i class="fa fa-github-square"></i> GitHub</a>
+						</li>
+						<li><a href="https://www.facebook.com/kirishoru"><i class="fa fa-facebook-square"></i> Facebook</a>
+						</li>
+						<li><a href="https://www.linkedin.com/pub/caleb-barger/15/82/54a"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
+						</li>
+					</ul>
+				</div>
 				<!--End Content-->
 
 			</div>
