--- a/public/calc.html
+++ b/public/calc.html
@@ -57,7 +57,9 @@
 				<!--Content-->
 				
 		<!--        <div id="col1">-->
-		<div class="col-sm-6">
+		<div class="panel panel-body"><p>I initially built this calculator as practice for doing math in javascript and jQuery, but after I built it, it turned out to be handy for my own personal use. Now I reference it all the time when calculating my caloric needs and body fat percentage. (BTW; I'm a bit of a fitness nerd)</p></div>
+				<div class="col-sm-6">
+			
 			<h3>Body Stats</h3>
 			<div id="stats">
 				<p>Jackson-Pollock Method</p>
