--- a/public/resume.html
+++ b/public/resume.html
@@ -105,8 +105,8 @@
 						<div class="panel-heading" role="tab" id="headingTwo">
 							<h4 class="panel-title">
 								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-									 	<div class="col-xs-6 text-left">Technology &amp; Development Manager</div>
-										<div class="col-xs-6 text-right">4/2010 - Present</div>
+									 	<div class="col-xs-9 text-left">Technology &amp; Development Manager <small>HDR, Inc.</small></div>
+										<div class="col-xs-3 text-right">4/2010 - Present</div>
 								  </a>
 								</h4>
 						</div>
@@ -135,8 +135,8 @@
 						<div class="panel-heading" role="tab" id="headingThree">
 							<h4 class="panel-title">
 								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-									 	<div class="col-xs-6 text-left">Project Manager / Business Analyst</div>
-										<div class="col-xs-6 text-right">4/2009 - 4/2010</div>									 
+									 	<div class="col-xs-9 text-left">Project Manager / Business Analyst <small>HDR, Inc.</small></div>
+										<div class="col-xs-3 text-right">4/2009 - 4/2010</div>									 
 								  </a>
 								</h4>
 						</div>
@@ -164,8 +164,8 @@
 						<div class="panel-heading" role="tab" id="headingFour">
 							<h4 class="panel-title">
 								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-									 	<div class="col-xs-6 text-left">Enterprise Systems Architect</div>
-										<div class="col-xs-6 text-right">5/2004 - 4/2009</div>									 
+									 	<div class="col-xs-9 text-left">Enterprise Systems Architect <small>Oregon Bridge Delivery Partners(HDR, Inc.)</small></div>
+										<div class="col-xs-3 text-right">5/2004 - 4/2009</div>									 
 								  </a>
 								</h4>
 						</div>
@@ -192,8 +192,8 @@
 						<div class="panel-heading" role="tab" id="headingFive">
 							<h4 class="panel-title">
 								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-									 	<div class="col-xs-6 text-left">Senior Systems Analyst</div>
-										<div class="col-xs-6 text-right">9/1998 - 5/2004</div>									 
+									 	<div class="col-xs-9 text-left">Senior Systems Analyst <small>Oregon State Legislature</small></div>
+										<div class="col-xs-3 text-right">9/1998 - 5/2004</div>									 
 								  </a>
 								</h4>
 						</div>
