--- a/public/effthisplace.html
+++ b/public/effthisplace.html
@@ -4,22 +4,21 @@
 <head>
 	<title>Kirishoru.com</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
-	<script src="js/script.js"></script>
-	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
-
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css">
+	<script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet-src.js"></script>
-	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.min.js"></script>
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+	
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css">
+	<link rel="stylesheet" href="css/style.css">
+	
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -64,8 +63,9 @@
 
 
 			<div class="col-sm-9">
-						<div class="panel panel-body"><p><strong>EffThisPlace</strong> started as a conversation with some colleagues about building a non-market specific comment map. The idea was to let any user put a point anywhere they want on a map, and then add a rating and a comment to the point. We'd let users view other people's comments and ratings and allow other types of visualizations. The full product is still a work in progress, but this is a concept map I came up with to demonstrate the idea. It utilizes a simple leaflet map, some custom markers, and mongoDB for record storage. </p></div>
+						<div class="panel panel-body"><p><strong>EffThisPlace</strong> started as a conversation with some colleagues about building a non-market specific comment map. The idea was to let any user put a point anywhere they want on a map, and then add a rating and a comment to the point. We'd let users view other people's comments and ratings and allow other types of visualizations. The full product is still a work in progress, but this is a concept map I came up with to demonstrate the idea. It utilizes a simple leaflet map, some custom markers, and mongoDB for record storage. The current functionality allos users to drag the marker to an appropriate location before confirming. The current rating system is randomly generated. </p></div>
 				<form class="form-block" id="addPlace">
+<!--
 					<div class="form-group" style="margin-bottom: 15px;">
 						<div class="input-group" style="width: inherit;">
 							<input class="form-control" rows="1" id="inputLocation" placeholder="Add all or part of an address, then rate it.">
@@ -76,18 +76,27 @@
 							</span>
 						</div>
 					</div>
+-->
+<!--
 					<div class="form-group" style="margin-bottom: 15px;">
 						<textarea id="comment" class="form-control" rows="2" placeholder="Care to explain your rating?" style="width: 100%;"></textarea>
 					</div>
+-->
 					<div class="form-group">
 						<button class="btn btn-primary btn-block" id="btnAddPlace">Map it</button>
 					</div>
 				</form>
 				<div id="map"></div>
+				
+<!--
+<div id="dialog" title="">
+<p>Rate this place!</p>
+</div>
+-->
+				
 			</div>
 		</div>
 	</div>
-	</script>
 	<script src="js/map.js"></script>
 </body>
 </html>
