--- a/public/effthisplace.html
+++ b/public/effthisplace.html
@@ -63,7 +63,7 @@
 
 
 			<div class="col-sm-9">
-						<div class="panel panel-body"><p><strong>EffThisPlace</strong> started as a conversation with some colleagues about building a non-market specific comment map. The idea was to let any user put a point anywhere they want on a map, and then add a rating and a comment to the point. We'd let users view other people's comments and ratings and allow other types of visualizations. The full product is still a work in progress, but this is a concept map I came up with to demonstrate the idea. It utilizes a simple leaflet map, some custom markers, and mongoDB for record storage. The current functionality allos users to drag the marker to an appropriate location before confirming. The current rating system is randomly generated. </p></div>
+						<div class="panel panel-body"><p><strong>EffThisPlace</strong> started as a conversation with some colleagues about building a non-market specific comment map. The idea was to let any user put a point anywhere they want on a map, and then add a rating and a comment to the point. We'd let users view other people's comments and ratings and allow other types of visualizations. The full product is still a work in progress, but this is a concept map I came up with to demonstrate the idea. It utilizes a simple leaflet map, some custom markers, and mongoDB for record storage. The current functionality allows users to drag the marker to an appropriate location before confirming. The rating system is randomly generated. </p></div>
 				<form class="form-block" id="addPlace">
 <!--
 					<div class="form-group" style="margin-bottom: 15px;">
