--- a/public/dash.html
+++ b/public/dash.html
@@ -6,20 +6,12 @@
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
-	<script src="js/script.js"></script>
+<!--	<script src="js/script.js"></script>-->
 	<script src="js/charts.js"></script>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/style.css">
-
-	<style>
-		text {
-			font-family: sans-serif;
-			font-size: 1.25em;
-			text-anchor: middle;
-			color: #3399FF;
-		}
-	</style>
 
 </head>
 
@@ -52,9 +44,9 @@
 								</li>
 								<li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
 								</li>
-								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
-								</li>
 								<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>
+								</li>
+								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
 							</ul>
 						</div>
@@ -62,9 +54,17 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-9" id="dash">
-						<div class="panel panel-body"><p>I intend to use this area to practice designing data visualizations. The piece below was just a throwaway built with D3. I'll add more along with some descriptions and background as I get a chance to design them.</p></div>
-				<h3>Coming Soon</h3>
+			<div class="col-sm-9">
+				<div class="row">		
+				<div class="panel panel-body"><p>I intend to use this area to practice designing data visualizations. The piece below was just a throwaway built with D3. I'll add more along with some descriptions and background as I get a chance to design them.</p><p>Expect bugginess in this area. Work in progress.</p></div></div>
+				<div class="row">
+				<div class="col-sm-5 col-xs-12 img-thumbnail dashPanel" id="dash1"><h3><span class="fa fa-tasks"></span> Website Progress</h3></div>
+				<div class="col-sm-5 col-xs-12 img-thumbnail dashPanel" id="dash2"><h3><span class="fa fa-spinner"></span> Coming Soon</h3></div>
+				</div>
+				<div class="row">
+				<div class="col-sm-5 col-xs-12 img-thumbnail dashPanel" id="dash3"><h3><span class="fa fa-spinner"></span> Coming Soon</h3></div>
+				<div class="col-sm-5 col-xs-12 img-thumbnail dashPanel" id="dash4"><h3><span class="fa fa-spinner"></span> Coming Soon</h3></div>
+				</div>
 			</div>
 		</div>
 	</div>
