--- a/public/resume.html
+++ b/public/resume.html
@@ -52,7 +52,7 @@
 						<!--/.nav-collapse -->
 					</div>
 				</div>
-				<div class="panel text-center panel-body" style="border: 1px solid; border-color: #ddd;">
+				<div class="panel text-center panel-body">
 					<img class="img img-responsive img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">
 					<div class="text-left">
 					<h5><strong>CERTIFICATIONS</strong></h5>
