--- a/public/calc.html
+++ b/public/calc.html
@@ -23,7 +23,6 @@
 				<div class="sidebar-nav">
 					<div class="navbar navbar-default bc-0-0" role="navigation">
 						<div class="navbar-header">
-
 							<button type="button" class="navbar-toggle bc-0-1" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
@@ -60,7 +59,7 @@
 		<div class="panel panel-body"><p>I initially built this calculator as practice for doing math in javascript and jQuery, but after I built it, it turned out to be handy for my own personal use. Now I reference it all the time when calculating my caloric needs and body fat percentage. (BTW; I'm a bit of a fitness nerd)</p>
 				<p>If you are interested in accurate results, the measurement section requires the use of some skinfold calipers. Otherwise, just play around.</p>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6 panel panel-body">
 			
 			<h3>Body Stats</h3>
 			<div id="stats">
@@ -133,7 +132,7 @@
 			<button type="button" class="btn btn-block" id="btn1">Calculate</button>
 		</div>
 		<!--        <div id="col2">-->
-		<div class="col-sm-6">
+		<div class="col-sm-5 panel panel-body">
 			<h3 style="">Results</h3>
 			<button type='button' class='btn btn-sm' id='btn2'>Clear Results</button>
 			<div class="results"></div>
