--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 			<div class="col-sm-9">
 
 				<!--Content-->
-				<h1>Experimentation Portal</h1>
+				<h1 style="color: #ddd;">Experimentation Portal</h1>
 				<div class="panel panel-body">
 					<p>This is just a place for me to practice my meager skills. Please don't look too deep, I am not a developer by trade.</p>
 					<p>That said, feel free to look around at my junkpile.</p>
