--- a/public/places.html
+++ b/public/places.html
@@ -26,7 +26,9 @@
                 <div class="col-md-12">
                     <table class="table table-hover table-responsive">
                         <thead>
-                            <th>Place</th>
+                            <th>Timestamp</th>
+                            <th>Rate</th>
+                            <th>Comment</th>
                             <th>Delete?</th>
                         </thead>
                         <tbody id="placeList"></tbody>
