--- a/public/dash.html
+++ b/public/dash.html
@@ -6,8 +6,10 @@
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+	<script src="http://documentcloud.github.io/underscore/underscore-min.js"></script>
 <!--	<script src="js/script.js"></script>-->
 	<script src="js/charts.js"></script>
+	<script src="js/stats.js"></script>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -59,7 +61,7 @@
 				<div class="panel panel-body"><p>I intend to use this area to practice designing data visualizations. The piece below was just a throwaway built with D3. I'll add more along with some descriptions and background as I get a chance to design them.</p><p>Expect bugginess in this area. Work in progress.</p></div></div>
 				<div class="row">
 				<div class="col-sm-5 col-xs-12 panel panel-body dashPanel" id="dash1"><h3><span class="fa fa-tasks"></span> Website Progress</h3></div>
-				<div class="col-sm-5 col-xs-12 panel panel-body dashPanel" id="dash2"><h3><span class="fa fa-spinner"></span> Coming Soon</h3></div>
+				<div class="col-sm-5 col-xs-12 panel panel-body dashPanel" id="dash2"><h3><span class="fa fa-pie-chart"></span> EffThisPlace Ratings</h3></div>
 				</div>
 				<div class="row">
 				<div class="col-sm-5 col-xs-12 panel panel-body dashPanel" id="dash3"><h3><span class="fa fa-spinner"></span> Coming Soon</h3></div>
