--- a/public/resume.html
+++ b/public/resume.html
@@ -57,7 +57,7 @@
 					<div class="text-left">
 					<h5><strong>CERTIFICATIONS</strong></h5>
 					<ul>
-						<li><span class="fa fa-circle"></span> ITILv3 Foundation</li>
+						<li><span class="fa fa-circle-check-o"></span> ITILv3 Foundation</li>
 						<!--
 						<li>ScrumMaster</li>
 						<li>PMI PMP</li>
