--- a/public/resume.html
+++ b/public/resume.html
@@ -53,7 +53,7 @@
 					</div>
 				</div>
 				<div class="panel text-center panel-body">
-					<img class="img img-responsive img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">
+<!--					<img class="img img-responsive img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">-->
 					<div class="text-left">
 					<h5><strong>CERTIFICATIONS</strong></h5>
 					<ul>
