--- a/public/dash.html
+++ b/public/dash.html
@@ -9,7 +9,7 @@
 	<script src="http://documentcloud.github.io/underscore/underscore-min.js"></script>
 <!--	<script src="js/script.js"></script>-->
 	<script src="js/charts.js"></script>
-	<script src="js/stats.js"></script>
+	<script src="js/stats2.js"></script>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
