--- a/public/dash.html
+++ b/public/dash.html
@@ -6,7 +6,8 @@
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
-	<script src="http://documentcloud.github.io/underscore/underscore-min.js"></script>
+	<script src="js/underscore.min.js"></script>
+<!--	<script src="http://documentcloud.github.io/underscore/underscore-min.js"></script>-->
 <!--	<script src="js/script.js"></script>-->
 	<script src="js/charts.js"></script>
 	<script src="js/stats2.js"></script>
