--- a/public/resume.html
+++ b/public/resume.html
@@ -58,7 +58,7 @@
 					<h5><strong>CERTIFICATIONS</strong></h5>
 					<ul>
 						<li><span class="fa fa-circle-check-o"></span> ITILv3 Foundation</li>
-						<li><span class="fa fa-circle-check-o"></span> Coming Soon: Scrum Master(CSM)</li>
+						<li><span class="fa fa-circle-check-o"></span> Certified Scrum Master(CSM)</li>
 						<!--
 						<li>ScrumMaster</li>
 						<li>PMI PMP</li>
