--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,11 @@
 								<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>
 								</li>
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
+								</li>								
+<!--
+								<li class="menu"><a href="comment.html"><span class="glyphicon glyphicon-comment"></span> Markov Generator</a>
 								</li>
+-->
 							</ul>
 						</div>
 						<!--/.nav-collapse -->
