--- a/public/comment.html
+++ b/public/comment.html
@@ -3,78 +3,137 @@
 
 <head>
 	<title>Kirishoru.com</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.3/d3.min.js"></script>
+	<script src="js/script.js"></script>
+	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/style.css">
+
 	<script>
-	$(document).ready(function () {
+		$(document).ready(function () {
 
-	$.getJSON('http://outerpowell.hdrinnovation.com/api/approvedcomments', function (data) {
+			$.getJSON('http://outerpowell.hdrinnovation.com/api/approvedcomments', function (data) {
 
-		var terminals = {};
-		var startwords = [];
-		var wordstats = {};
+				var terminals = {};
+				var startwords = [];
+				var wordstats = {};
 
-		var titles = [];
+				var titles = [];
 
-		for (var i = 0; i < data[0].features.length; i++) {
-			titles.push(data[0].features[i].properties.commentText);
-		};
-		for (var i = 0; i < data[0].features.length; i++) {
-			titles.push(data[1].features[i].properties.commentText);
-		};
+				for (var i = 0; i < data[0].features.length; i++) {
+					titles.push(data[0].features[i].properties.commentText);
+				};
+				for (var i = 0; i < data[0].features.length; i++) {
+					titles.push(data[1].features[i].properties.commentText);
+				};
 
-		for (var i = 0; i < titles.length; i++) {
-			var words = titles[i].split(' ');
-			terminals[words[words.length - 1]] = true;
-			startwords.push(words[0]);
-			for (var j = 0; j < words.length - 1; j++) {
-				if (wordstats.hasOwnProperty(words[j])) {
-					wordstats[words[j]].push(words[j + 1]);
-				} else {
-					wordstats[words[j]] = [words[j + 1]];
+				for (var i = 0; i < titles.length; i++) {
+					var words = titles[i].split(' ');
+					terminals[words[words.length - 1]] = true;
+					startwords.push(words[0]);
+					for (var j = 0; j < words.length - 1; j++) {
+						if (wordstats.hasOwnProperty(words[j])) {
+							wordstats[words[j]].push(words[j + 1]);
+						} else {
+							wordstats[words[j]] = [words[j + 1]];
+						}
+					}
 				}
-			}
-		}
 
-		var choice = function (a) {
-			var i = Math.floor(a.length * Math.random());
-			return a[i];
-		};
+				var choice = function (a) {
+					var i = Math.floor(a.length * Math.random());
+					return a[i];
+				};
 
-		var make_title = function (min_length) {
-			word = choice(startwords);
-			var title = [word];
-			while (wordstats.hasOwnProperty(word)) {
-				var next_words = wordstats[word];
-				word = choice(next_words);
-				title.push(word);
-				if (title.length > min_length && terminals.hasOwnProperty(word)) break;
-			}
-			if (title.length < min_length) return make_title(min_length);
-			return title.join(' ');
-		};
+				var make_title = function (min_length) {
+					word = choice(startwords);
+					var title = [word];
+					while (wordstats.hasOwnProperty(word)) {
+						var next_words = wordstats[word];
+						word = choice(next_words);
+						title.push(word);
+						if (title.length > min_length && terminals.hasOwnProperty(word)) break;
+					}
+					if (title.length < min_length) return make_title(min_length);
+					return title.join(' ');
+				};
 
-		$('#generate').on('click', function () {
-			var title = make_title(3 + Math.floor(3 * Math.random()));
-			$('#generated_title').html(title);
+				$('#generate').on('click', function () {
+					var title = make_title(3 + Math.floor(3 * Math.random()));
+					$('#generated_title').html(title);
+				});
+
+			});
 		});
-
-	});
-});
 	</script>
+
+
 </head>
 
 <body>
 	<div class="container-fluid">
 		<div class="row" style="padding-bottom: 10px;"></div>
+
 		<div class="row">
-			<div class="col-sm-12 panel panel-body">
-				<h2 id="generated_title"></h2>
-				<button id="generate" class="btn btn-default">Generate Comment</button>
+			<div class="col-sm-3">
+				<div class="sidebar-nav">
+					<div class="navbar navbar-default bc-0-0" role="navigation">
+						<div class="navbar-header">
+
+							<button type="button" class="navbar-toggle bc-0-1" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+						</div>
+						<div class="navbar-collapse collapse sidebar-navbar-collapse">
+							<ul class="nav navbar-nav">
+								<li class="menu">
+									<a href="index.html"><img alt="Brand" src="img/logo.svg" height="16px"> Home</a>
+								</li>
+								<li class="menu"><a href="resume.html"><span class="glyphicon glyphicon-briefcase"></span> Resume</a>
+								</li>
+								<li class="text-center bc-0-1">
+									<p class="fc-0-4" style="padding-right:10px;"><span class="caret"></span> Experiments<span class="caret"></span>
+									</p>
+								</li>
+								<li class="menu"><a href="calc.html"><span class="glyphicon glyphicon-scale"></span> Body Composition Calculator</a>
+								</li>
+								<li class="menu"><a href="effthisplace.html"><span class="glyphicon glyphicon-globe"></span> Eff This Place</a>
+								</li>
+								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
+								</li>
+								<li class="menu"><a href="comment.html"><span class="glyphicon glyphicon-comment"></span> Markov Generator</a>
+								</li>
+							</ul>
+						</div>
+						<!--/.nav-collapse -->
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-9">
+
+				<!--Content-->
+				<h1 style="color: #ddd;">Comment Generator</h1>
+				<div class="panel panel-body">
+					<div class="col-sm-12 panel panel-body">
+						<p>I played around with grabbing public comment data and using it to build a Markov generator. I'll mess around with this more later and probably aim it at a twitter feed.</p>
+						<h2 id="generated_title"></h2>
+						<button id="generate" class="btn">Generate Comment</button>
+					</div>
+				</div>
+				<!--End Content-->
+
 			</div>
 		</div>
 	</div>
 </body>
+
+</html>
 
 </html>
