--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,8 @@
 								</li>
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>								
-<!--
-								<li class="menu"><a href="comment.html"><span class="glyphicon glyphicon-comment"></span> Markov Generator</a>
+								<li class="menu"><a href="tweets.html"><span class="glyphicon glyphicon-comment"></span> TweetBot!</a>
 								</li>
--->
 							</ul>
 						</div>
 						<!--/.nav-collapse -->
