--- a/public/calc.html
+++ b/public/calc.html
@@ -46,6 +46,8 @@
 								</li>
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
+								<li class="menu"><a href="tweets.html"><span class="glyphicon glyphicon-comment"></span> TweetBot!</a>
+								</li>
 							</ul>
 						</div>
 						<!--/.nav-collapse -->
