--- a/public/resume.html
+++ b/public/resume.html
@@ -47,6 +47,9 @@
 								</li>
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
+								<li class="menu"><a href="tweets.html"><span class="glyphicon glyphicon-comment"></span> TweetBot!</a>
+								</li>								
+								
 							</ul>
 						</div>
 						<!--/.nav-collapse -->
