--- a/public/tweets.html
+++ b/public/tweets.html
@@ -13,66 +13,7 @@
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
-
-	<script>
-		$(document).ready(function () {
-
-			$.getJSON('http://outerpowell.hdrinnovation.com/api/approvedcomments', function (data) {
-
-				var terminals = {};
-				var startwords = [];
-				var wordstats = {};
-
-				var titles = [];
-
-				for (var i = 0; i < data[0].features.length; i++) {
-					titles.push(data[0].features[i].properties.commentText);
-				};
-				for (var i = 0; i < data[0].features.length; i++) {
-					titles.push(data[1].features[i].properties.commentText);
-				};
-
-				for (var i = 0; i < titles.length; i++) {
-					var words = titles[i].split(' ');
-					terminals[words[words.length - 1]] = true;
-					startwords.push(words[0]);
-					for (var j = 0; j < words.length - 1; j++) {
-						if (wordstats.hasOwnProperty(words[j])) {
-							wordstats[words[j]].push(words[j + 1]);
-						} else {
-							wordstats[words[j]] = [words[j + 1]];
-						}
-					}
-				}
-
-				var choice = function (a) {
-					var i = Math.floor(a.length * Math.random());
-					return a[i];
-				};
-
-				var make_title = function (min_length) {
-					word = choice(startwords);
-					var title = [word];
-					while (wordstats.hasOwnProperty(word)) {
-						var next_words = wordstats[word];
-						word = choice(next_words);
-						title.push(word);
-						if (title.length > min_length && terminals.hasOwnProperty(word)) break;
-					}
-					if (title.length < min_length) return make_title(min_length);
-					return title.join(' ');
-				};
-
-				$('#generate').on('click', function () {
-					var title = make_title(3 + Math.floor(3 * Math.random()));
-					$('#generated_title').html(title);
-				});
-
-			});
-		});
-	</script>
-
-
+	<script src="js/tweets.js"></script>
 </head>
 
 <body>
@@ -108,7 +49,7 @@
 								</li>
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
-								<li class="menu"><a href="comment.html"><span class="glyphicon glyphicon-comment"></span> Markov Generator</a>
+								<li class="menu"><a href="tweets.html"><span class="glyphicon glyphicon-comment"></span> TweetBot!</a>
 								</li>
 							</ul>
 						</div>
@@ -119,12 +60,13 @@
 			<div class="col-sm-9">
 
 				<!--Content-->
-				<h1 style="color: #ddd;">Comment Generator</h1>
+				<h1 style="color: #ddd;">Tweet Generator</h1>
 				<div class="panel panel-body">
 					<div class="col-sm-12 panel panel-body">
-						<p>I played around with grabbing public comment data and using it to build a Markov generator. I'll mess around with this more later and probably aim it at a twitter feed.</p>
+						<p>I played around with grabbing public tweets using them to build a Markov-based tweetbot. It mostly generates gibberish, but it was kind of fun.</p>
+						<p>Current Target: <a href="https://twitter.com/realDonaldTrump">@realDonaldTrump</a></p>
 						<h2 id="generated_title"></h2>
-						<button id="generate" class="btn">Generate Comment</button>
+						<button id="generate" class="btn">Generate Tweet</button>
 					</div>
 				</div>
 				<!--End Content-->
