--- a/public/dash.html
+++ b/public/dash.html
@@ -52,7 +52,7 @@
 								</li>
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
-								<li class="menu"><a href="tweets.html"><span class="glyphicon glyphicon-comment"></span> TweetBot!</a>
+								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Bot!</a>
 								</li>
 							</ul>
 						</div>
