--- a/public/bot.html
+++ b/public/bot.html
@@ -13,7 +13,7 @@
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="js/tweets.js"></script>
+	<script src="js/markov.js"></script>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
 								</li>
 								<li class="menu"><a href="dash.html"><span class="glyphicon glyphicon-dashboard"></span> Dashboard</a>
 								</li>
-								<li class="menu"><a href="tweets.html"><span class="glyphicon glyphicon-comment"></span> TweetBot!</a>
+								<li class="menu"><a href="bot.html"><span class="glyphicon glyphicon-comment"></span> Bot!</a>
 								</li>
 							</ul>
 						</div>
@@ -60,13 +60,12 @@
 			<div class="col-sm-9">
 
 				<!--Content-->
-				<h1 style="color: #ddd;">Tweet Generator</h1>
+				<h1 style="color: #ddd;">Reddit Headline Generator</h1>
 					<div class="col-sm-12 panel panel-body">
-						<p>I played around with grabbing public tweets using them to build a Markov-based tweetbot. It mostly generates gibberish, but it was kind of fun.</p>
-						<p>Still working on a feature to allow people to enter a different twitter user or hashtag and generate these on the fly.</p>
-						<p>Current Target: <a href="https://twitter.com/realDonaldTrump">@realDonaldTrump</a></p>
+						<p>I played around with grabbing titles from the current top of AskReddit and used them to build a Markov-based bot. It mostly generates gibberish, but it was kind of fun.</p>
+						<p>Still working on a feature to allow people to enter a different subreddit or search tag and generate these on the fly.</p>
 						<h2 id="generated_title"></h2>
-						<button id="generate" class="btn">Generate Tweet</button>
+						<button id="generate" class="btn">Generate Headline</button>
 					</div>
 				<!--End Content-->
 
