switched bot to resume bullets

--- a/public/bot.html
+++ b/public/bot.html
@@ -60,12 +60,11 @@
 			<div class="col-sm-9">
 
 				<!--Content-->
-				<h1 style="color: #ddd;">Reddit Headline Generator</h1>
+				<h1 style="color: #ddd;">Resume Bullet Generator</h1>
 					<div class="col-sm-12 panel panel-body">
-						<p>I played around with grabbing titles from the current top of AskReddit and used them to build a Markov-based bot. It mostly generates gibberish, but it was kind of fun.</p>
-						<p>Still working on a feature to allow people to enter a different subreddit or search tag and generate these on the fly.</p>
+						<p>I made a resume bullet generator bot by feeding my resume into a Markov engine. It's kinda funny.</p>
 						<h2 id="generated_title"></h2>
-						<button id="generate" class="btn">Generate Headline</button>
+						<button id="generate" class="btn">Generate Bullet</button>
 					</div>
 				<!--End Content-->
 
