--- a/public/bot.html
+++ b/public/bot.html
@@ -64,7 +64,7 @@
 					<div class="col-sm-12 panel panel-body">
 						<p>I made a resume bullet generator bot by feeding my resume into a Markov engine. It's kinda funny.</p>
 						<h2 id="generated_title"></h2>
-						<button id="generate" class="btn">Generate Bullet</button>
+						<button id="generate" class="btn"></button>
 					</div>
 				<!--End Content-->
 
