--- a/public/resume.html
+++ b/public/resume.html
@@ -10,7 +10,7 @@
 	<script src="js/script.js"></script>
 	<link rel="icon" href="img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -60,12 +60,8 @@
 					<div class="text-left">
 					<h5><strong>CERTIFICATIONS</strong></h5>
 					<ul>
-						<li><span class="fa fa-circle-check-o"></span> ITILv3 Foundation</li>
-						<li><span class="fa fa-circle-check-o"></span> Certified Scrum Master(CSM)</li>
-						<!--
-						<li>ScrumMaster</li>
-						<li>PMI PMP</li>
--->
+						<li><span class="fa fa-check-circle-o"></span> ITILv3 Foundation</li>
+						<li><span class="fa fa-check-circle-o"></span> Certified Scrum Master(CSM)</li>
 					</ul></div>
 				</div>
 			</div>
