posting system completed

--- a/public/index.html
+++ b/public/index.html
@@ -58,11 +58,9 @@
 			<div class="col-sm-9">
 
 				<!--Content-->
-				<h1 style="color: #ddd;">Experimentation Portal</h1>
+				<h1 style="color: #ddd;">I Have No Idea What I'm Doing</h1>
 				<div class="panel panel-body">
 					<p>This is just a place for me to practice my meager skills. Please don't look too deep, I am not a developer by trade.</p>
-					<p>That said, feel free to look around at my junkpile.</p>
-					<!--				<img class="img img-responsive pull-left img-thumbnail" src="http://graph.facebook.com/kirishoru/picture?height=150&width=150">-->
 					<p>Check me out on:</p>
 					<ul>
 						<li><a href="https://github.com/kirishoru"><i class="fa fa-github-square"></i> GitHub</a>
@@ -73,11 +71,14 @@
 						</li>
 					</ul>
 				</div>
+				<h2>POSTS!!</h2>
+				<div id="postFeed"></div>
+				<!--<div class="panel panel-body" id="postFeed"></div>-->
 				<!--End Content-->
 
 			</div>
 		</div>
 	</div>
+	<script src="js/posts.js"></script>
 </body>
-
 </html>
