--- a/public/posts.html
+++ b/public/posts.html
@@ -13,32 +13,11 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10">
-                <h1>Places</h1>
-                <br>
-            </div>
-            <div class="col-md-1"></div>
+            <div class="col-md-12"></div>
         </div>
         <div class="row">
             <div class="col-md-1"></div>
-            <div class="col-md-5">
-                <div class="col-md-12">
-                    <table class="table table-hover table-responsive">
-                        <thead>
-                            <th>Title</th>
-                            <th>Content</th>
-                        </thead>
-                        <tbody id="placeList"></tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="col-md-1"></div>
-        </div>
-        <br>
-        <div class="row">
-            <div class="col-md-1"></div>
-
+            <div class="col-md-10" id="postFeed"></div>
             <div class="col-md-1"></div>
         </div>
     </div>
@@ -49,3 +28,4 @@
 </body>
 
 </html>
+
