--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
 						</li>
 					</ul>
 				</div>
-				<h2>POSTS!!</h2>
+				<!--<h2>POSTS!!</h2>-->
 				<div id="postFeed"></div>
 				<!--<div class="panel panel-body" id="postFeed"></div>-->
 				<!--End Content-->
