--- a/public/resume.html
+++ b/public/resume.html
@@ -83,18 +83,15 @@
 							<div class="panel-body">
 								<div class="col-sm-6">
 									<span class="fa fa-users pull-left big"></span>
-									<p class="desc">A Software Development Manager with 16 years of mixed technology project management experience and a track record of leading teams into success. Recognized as a driver of technology vision, with extensive experience in quality, planning, and innovative solutions.
-									</p>
+									<p class="desc">A Software Development Manager with 20 years of program & project management experience that is recognized as an innovative leader, fostering creative solutions, motivating team members, and expertly balancing technical needs with business value.</p>
 								</div>
 								<div class="col-sm-6">
-									<h5><strong>COMPETENCIES</strong></h5>
+									<h5><strong>SKILLS</strong></h5>
 									<ul>
-										<li><span class="fa fa-compass"></span> Strategic &amp; Business Planning</li>
 										<li><span class="fa fa-tasks"></span> Project &amp; Program Management</li>
 										<li><span class="fa fa-refresh"></span> Change &amp; Risk Management</li>
 										<li><span class="fa fa-cogs"></span> Process Improvement</li>
 										<li><span class="fa fa-users"></span> Requirements, Budget, &amp; Estimation</li>
-										<li><span class="fa fa-usd"></span> Budget &amp; Estimation</li>
 										<li><span class="fa fa-sitemap"></span> Scrum/Agile SDLCs</li>
 										<li><span class="fa fa-code"></span> JavaScript, jQuery, NodeJS, Angular, Meteor, blah blah blah</li>
 									</ul>
@@ -116,17 +113,16 @@
 								<div class="col-sm-6">
 									<h5><strong>RESPONSIBILITIES</strong></h5>
 									<span class="fa fa-users big pull-left"></span>
-									<p>MManage staff, in-house and outsourced, organized as both agile and traditional, delivering an SaaS service portfolio and managing projects for developing custom business solutions. Oversee operations for consulting group, leading a team of multi-platform developers. Communicate with potential clients to identify business needs and evaluate appropriate applications of technology. Plan, direct, and monitor all aspects of large multi-discipline projects with high degree of technical complexity. Responsible for multiple concurrent projects for a broad range of clients. Develop and maintain team budgets and resource allocations across all projects.  Provide guidance on strategic technology policy and perform assessments to enhance operations.
-									</p>
+									<p>Leads a technology consulting group of multi-platform developers, in-house and outsourced, creating custom solutions for challenging business needs. Provides guidance on strategic technology policy and assesses existing operations to identify potential efficiencies. Communicate with potential clients to identify business needs and evaluate appropriate applications of technology. Build, grow, and coach staff to create high-performance teams.</p>
 								</div>
 								<div class="col-sm-6">
 									<h5><strong>ACCOMPLISHMENTS</strong></h5>
 									<ul>
-										<li><span class="fa fa-circle"></span> Led the development of a public outreach comment collection template, deployed as a mobile-first SaaS web application that allowed collection of custom data within hours. Usage of the template resulted in a 90% decrease in ramp-up costs for comment collection services.</li>
-										<li><span class="fa fa-circle"></span> Led the development of an interactive map-based logistical preparedness application for an oil-spill containment group that enables the automation of response plans. The application provides first responders a platform to organize required inventory quicker, resulting in overall time savings of several days for spill events.</li>
-										<li><span class="fa fa-circle"></span> Managed the development of an SaaS real property management solution for the Customs and Border Protection division of the U.S. Department of Homeland Security that saved hundreds of hours of integration time by providing templates for an internal asset management solution.</li>
-										<li><span class="fa fa-circle"></span> Optimized the data management and quality assurance processes for legislative reporting within the Oregon Department of Transportation’s (ODOT) State Radio Project, resulting in a 50% reduction in turnaround costs for monthly deliverables, saving the agency hundreds of thousands of dollars over the course of the program.</li>
-										<li><span class="fa fa-circle"></span> Managed the development of a GIS-based ledger tool for environmental mitigation banking that allows agencies to record mitigation activities. The tool was turned into a template that can be deployed with a very short turnaround</li>
+										<li><span class="fa fa-circle"></span> Developed a public involvement toolkit, deployed as a mobile-first MongoDB/Node.js application, that allowed collection of custom data within hours. Usage of the template resulted in a 90% decrease in ramp-up costs for comment collection services and provided a framework for sentiment analysis for any public campaign.</li>
+										<li><span class="fa fa-circle"></span> Developed an AngularJS interactive map-based logistical preparedness application for an oil-spill containment group that enables the automation of response plans. The application provided first responders a platform to organize required inventory quicker, resulting in overall time savings of several days for spill events, potentially saving millions of dollars in environmental cleanup.</li>
+										<li><span class="fa fa-circle"></span> Developed a SaaS ASP.NET real property management solution for the Customs and Border Protection division of the U.S. Department of Homeland Security that saved hundreds of hours of integration time by providing templates for an internal asset management solution.</li>
+										<li><span class="fa fa-circle"></span> Optimized and automated the data management and quality assurance processes for legislative reporting within the Oregon Department of Transportation’s (ODOT) State Radio Project, resulting in a 50% reduction in turnaround costs for monthly deliverables, saving the agency hundreds of thousands of dollars over the course of the program.</li>
+										<li><span class="fa fa-circle"></span> Managed the development of a GIS-based ledger tool for environmental mitigation banking that allows agencies to record mitigation activities. The tool was turned into a template that can be deployed with a very short turnaround.</li>
 									</ul>
 								</div>
 							</div>
@@ -154,7 +150,7 @@
 										<li><span class="fa fa-circle"></span> Introduced agile methodologies into team practices resulting in 50% faster project turnaround and a higher degree of satisfaction in client engagements.</li>
 										<li><span class="fa fa-circle"></span> Virtualized development resources to cloud-based solution resulting in a 50% decrease in infrastructure costs, increased scalability, and expanding potential market penetration.</li>
 										<li><span class="fa fa-circle"></span> Implemented comprehensive defect tracking and source control systems that resulted in 100% faster turnaround of issues and greater control of product development cycle.</li>
-										<li><span class="fa fa-circle"></span> Established the base transparency model for a custom centralized reporting application compliant with the Federal Office of Management and Budget (OMB) guidelines for the American Recovery and Reinvestment Act (ARRA) that includes a dynamic ad-hoc reporting GIS services to visualize the path of stimulus funds. The central reporting platform was utilized by the State of Oregon for the entirety of the ARRA reporting requirements.</li>
+										<li><span class="fa fa-circle"></span> Spearheaded the development of a custom SaaS reporting application compliant with the Federal Office of Management and Budget (OMB) guidelines for the American Recovery and Reinvestment Act (ARRA) that includes a dynamic ad hoc reporting and GIS services to visualize the path of stimulus funds. The platform was utilized by 95% of agencies within the state of Oregon for the entirety of the ARRA reporting requirements, potentially saving millions of dollars in recovery funds.</li>
 									</ul>
 								</div>
 							</div>
@@ -164,7 +160,7 @@
 						<div class="panel-heading" role="tab" id="headingFour">
 							<h4 class="panel-title">
 								  <a class="clearfix collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-									 	<div class="col-xs-9 text-left">Enterprise Systems Architect <small>Oregon Bridge Delivery Partners(HDR, Inc.)</small></div>
+									 	<div class="col-xs-9 text-left">Enterprise Systems Manager <small>Oregon Bridge Delivery Partners(HDR, Inc.)</small></div>
 										<div class="col-xs-3 text-right">5/2004 - 4/2009</div>									 
 								  </a>
 								</h4>
@@ -174,12 +170,12 @@
 								<div class="col-sm-6">
 									<h5><strong>RESPONSIBILITIES</strong></h5>
 									<span class="fa fa-sitemap big pull-left"></span>
-									<p>Responsible for enterprise technical operational strategy. Establish and implement policies for resource usage. Develop standards and best practices for systems architecture, implementation, and process. Design, capture, and analyze performance metrics for demand, capacity, and overall infrastructure utilization. Advise executive management on the benefits and risks of technology implementation and change. Work with clients, vendors, and technical consultants both internally and externally. Conducts reviews of the enterprise environment to proactively address potential problem areas.</p>
+									<p>Establish a startup joint-venture enterprise architecture and build a technical team for delivery of program goals. Responsible for enterprise technology strategy and establishing policies for technical resource usage by developing standards and best practices for systems, architecture, implementation, and development. Develop performance metrics for demand, capacity, and utilization and advise executives on the benefits and risks of technology strategic goals.</p>
 								</div>
 								<div class="col-sm-6">
 									<h5><strong>ACCOMPLISHMENTS</strong></h5>
 									<ul>
-										<li><span class="fa fa-circle"></span> Co-developed and implemented enterprise level network topology for spin-off joint venture company. </li>
+										<li><span class="fa fa-circle"></span> Co-developed and implemented enterprise level network topology for spin-off joint venture company.</li>
 										<li><span class="fa fa-circle"></span> Developed multiple policies to direct technology service usage throughout the enterprise.</li>
 										<li><span class="fa fa-circle"></span> Implemented numerous measures to decrease risk of loss due to unlicensed software.</li>
                                         <li><span class="fa fa-circle"></span> Introduced security measures to reduce potential cyber threat.</li>
